styling of postspage

--- a/public/stylesheets/input.scss
+++ b/public/stylesheets/input.scss
@@ -1,5 +1,5 @@
 
-
+#myid{
 
 * {
 	margin:0;
@@ -92,3 +92,5 @@ ul li a:hover,ul li a:focus{
 ol{text-align:center;}
 ol li{display:inline;padding-right:1em;}
 ol li a{color:#fff;}
+
+}
