--- a/views/signup.pug
+++ b/views/signup.pug
@@ -5,7 +5,7 @@ block title
 	title=title
 block content
 	div
-		h1 #{errorMessage}
+		.pink-text #{errorMessage}
 		.row
 			form.col.s12(method='post' name='signup')
 				.row
