--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,16 +3,18 @@ html
 	head
 		block title
 			title= title
-		block link	
-			link(rel='stylesheet', href='stylesheets/materialize.min.css')
-			script(type='text/javascript', src='javascripts/jquery-2.2.4.min.js')
-			script(type='text/javascript', src='javascripts/materialize.min.js')
+		block link
+			link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
+			link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css')
+			link(href='http://fonts.googleapis.com/css?family=Reenie+Beanie:regular' rel='stylesheet' type='text/css')
+			link(rel='stylesheet' href='stylesheets/custom.css')
+			
 	body
 		block navlist
 			nav
 				.nav-wrapper
-					a.brand-logo.right.active(href='/') BlogApp
-					ul#nav-mobile.left
+					a.brand-logo.left.active(href='/') BlogApp
+					ul#nav-mobile.right
 						li
 							a(href='/signup') Signup
 						li
@@ -24,5 +26,7 @@ html
 						li
 							a(href='/allposts') All Posts
 						
-
+		block script
+			script(type='text/javascript', src='https://code.jquery.com/jquery-2.1.1.min.js')
+			script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js')
 		block content
