--- a/views/login.pug
+++ b/views/login.pug
@@ -8,7 +8,7 @@ block content
 			form.col.s12(method='post' name='login')
 				.row
 				.input-field.col.s6
-					input#username.validate(type='text' name='username' autocomplete='off' )
+					input#username.validate(type='text' name='username' autocomplete='off' autofocus)
 					label.waves-text.text-lighten-1(for='username') Username
 				.row
 				.input-field.col.s6
