--- a/views/login.pug
+++ b/views/login.pug
@@ -16,4 +16,4 @@ block content
 					label.waves-text.text-lighten-1(for='password') Password
 				.row
 				.input-field.col.s2
-					input#submit.validate.waves-effect.waves.lighten-1.btn(type='submit')
+					button#submit.validate.waves-effect.waves.lighten-1.btn(type='submit') submit
