--- a/views/signup.pug
+++ b/views/signup.pug
@@ -22,7 +22,7 @@ block content
 					label.waves-text.text-lighten-1(for='password') Re-type Password
 				.row
 				.input-field.col.s2
-					input#submit.validate.waves-effect.waves.lighten-1.btn(type='submit')
+					button#submit.validate.waves-effect.waves.lighten-1.btn(type='submit') submit
 
 
 				
