--- a/views/test.html
+++ b/views/test.html
@@ -12,8 +12,11 @@
       <div class="row">
         <div class="input-field col s6">
           <input id="password" type="password" class="validate">
-          <label for="password">Password</label>
+          <label for="password" style="font-weight: bold">Password</label>
         </div>
       </div>
     </form>
   </div>
+
+
+
