--- a/views/unknown.pug
+++ b/views/unknown.pug
@@ -1,15 +1,17 @@
 extends layout
 
-block navlist
+
 
 block content
-	.row
-		.col.s12.m6
+	
+	.valign-wrapper
+		.row.valign.center-align
 			.card.teal.lighten-1
-				.card-content.white-text
-					span.card-title BlogApp
-					p #{errorMessage}
-				.card-action
-					a(href='/signup') Signup
-					a(href='/login') Login
-					a(href='/') Home
+					.card-content.white-text
+						span.card-title BlogApp
+						p #{errorMessage}
+			.card.teal.lighten-1
+					.card-content.white-text
+						span.card-title Suckaaaaa
+
+					
