--- a/public/stylesheets/input.scss
+++ b/public/stylesheets/input.scss
@@ -1,11 +1,15 @@
 
+
 #myid{
+
+
 
 * {
 	margin:0;
 	padding:0;
 }
 body{
+	
 	font-family:arial,sans-serif;
 	font-size:100%;
 	margin:3em;
@@ -13,23 +17,27 @@ body{
 	color:#fff;
 }
 h2,p{
+
 	font-size:100%;
 	font-weight:normal;
 }
 ul,li{
+
 	list-style:none;
 }
 ul{
+
 	overflow:hidden;
 	padding:3em;
 }
 ul li a{
-	text-decoration:none;
+
+	text-decoration:underline;
 	color:#000;
 	background:#ffc;
 	display:block;
-	height:10em;
-	width:10em;
+	height:15em;
+	width:15em;
 	padding:1em;
 	-moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
 	-webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
@@ -39,6 +47,7 @@ ul li a{
 	-webkit-transition:-webkit-transform .15s linear;
 }
 ul li{
+
 	margin:1em;
 	float:left;
 }
@@ -48,10 +57,12 @@ ul li h2{
 	padding-bottom:10px;
 }
 ul li p{
+
 	font-family:"Reenie Beanie",arial,sans-serif;
 	font-size:180%;
 }
 ul li a{
+
 	-webkit-transform: rotate(-6deg);
 	-o-transform: rotate(-6deg);
 	-moz-transform:rotate(-6deg);
@@ -93,4 +104,30 @@ ol{text-align:center;}
 ol li{display:inline;padding-right:1em;}
 ol li a{color:#fff;}
 
+}
+
+
+
+li.usertjes {
+	padding:3em;
+}
+
+
+#jemoeder {
+	.card{
+		-webkit-transition: 1s;
+	}
+
+
+	.card:hover{
+		
+		-webkit-transform: scale(1.10);
+		
+		
+	}
+}
+
+body {
+	font-family: Raleway;
+	font-weight: bold;
 }
