--- a/views/index.pug
+++ b/views/index.pug
@@ -31,17 +31,39 @@ block content
 				.row.valign.center-align
 					#jemoeder
 						a(href='/login')
-							.card.teal.lighten-1
+							.offset-s3.card.teal.lighten-1
 									.card-content.white-text
 										
 										span.card-title
 										p Please Login
 						a(href='/signup')
-							.card.teal.lighten-1
+							.offset-s2.card.teal.lighten-1
 									.card-content.white-text
 										
 										span.card-title 
-										p Or signup
+										p Or signup 
+						.section
+						.section
+						.section
+						.section
+						a(href='http://ducksarethebest.com/')
+							.offset-s4.card.teal.lighten-1
+									.card-content.white-text
+										
+										span.card-title 
+										p Ducks Are The Best
+						a(href='http://just-shower-thoughts.tumblr.com/')
+							.offset-s5.card.teal.lighten-1
+									.card-content.white-text
+										
+										span.card-title 
+										p Shower Thoughts
+						a(href='http://www.koalastothemax.com/')
+							.offset-s5.card.teal.lighten-1
+									.card-content.white-text
+										
+										span.card-title 
+										p Draw a Koala
 	if username === "Kevin"
 		.section
 		.section
