--- a/views/index.pug
+++ b/views/index.pug
@@ -3,8 +3,8 @@ extends layout
 block content
 	
 	if username && !(username == "Kevin")
-
-
+			.section
+			.section
 			.container
 				.row.valign.center-align
 					.card.teal.lighten-1.z-depth-2
