--- a/views/users.pug
+++ b/views/users.pug
@@ -13,6 +13,6 @@ block content
 				each user in users
 					li.usertjes.col.s3
 						.row
-						a.col.s8.waves-effect.waves-light.btn(href='/allposts/'+ user.username) #{user.username}
+						a.col.s8.waves-effect.waves-light.btn(href='/findpost/'+ user.id) #{user.username}
 						
 						
