--- a/public/stylesheets/input.scss
+++ b/public/stylesheets/input.scss
@@ -133,3 +133,15 @@ body {
 	font-family: Raleway;
 	font-weight: bold;
 }
+
+
+#jemoeder2 {
+	.card-panel.teal {
+		-webkit-transition: 0.5s;
+	}
+	
+	.card-panel.teal:hover {
+		-webkit-transform: scale(1.10);
+	}
+
+}
