--- a/views/allposts.pug
+++ b/views/allposts.pug
@@ -13,7 +13,8 @@ block content
 					each post in posts
 							li.col.s4
 								a(href= '/findpost/' + post.userId + '/' + post.id).row
-										.card-panel.teal
-											span.white-text
-												h1 # #{post.title} 
-												p By: #{post.user.username}
+										#jemoeder2
+											.card-panel.teal
+												span.white-text
+													h1 # #{post.title} 
+													p By: #{post.user.username}
